[package]
name = "srfngout"
version = "0.1.0"
authors = ["Paul Saunders <coruscateor@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A commandline tool for generating semi-random file names"
readme = "README.md"
repository = "https://github.com/coruscateor/srfngout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srfng = { path = "../srfng" }

